Home page updated

--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
     img {
       display: block;
       margin-top: 40px;
-      border-radius: 50%;
-      border: 2px solid rgb(255, 255, 255);
+      margin-bottom: 100px;
       padding: 3px;
 
 
@@ -161,6 +160,7 @@
       font-size: large;
 
     }
+
   </style>
 </head>
 
@@ -172,16 +172,15 @@
   <div class="main" id="main">
     <div align="center">
 
-      <img src="Images/HomeProPic1.png" alt="Saif Ahammod" style="width:30%;">
+      <img src="Images/logo.png" alt="Saif Ahammod" style="width:40%;">
       <h1>
         SAIF AHAMMOD KHAN
+        <br><br>
       </h1>
+          <a href="about.html"><button class="button button1">PORTFOLIO</button></a>
 
-
-
-      <a href="about.html"><button class="button button1">PORTFOLIO</button></a>
       <br>
-      <a href="Doc/cv.pdf"><button class="button button1">RESUME</button></a>
+      
     </div>
     
   </div>
