--- a/experties.html
+++ b/experties.html
@@ -319,7 +319,7 @@
             <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i
                     class="fa fa-bars"></i></span>
             <div class="w3-container">
-                <h1>Experience</h1>
+                <h1>Experties</h1>
             </div>
         </header>
 
