--- a/research.html
+++ b/research.html
@@ -344,7 +344,7 @@ div.desc {
         <H4>Assist</H4>
         <p>Assist is an AI based design where it can monitor elderly or disable person through a camera and detect 
             hand gesture and send feedback to an android app named "Assist" upon the need.</p>
-            <p><button class="w3-button w3-block w3-blue">Read More</button></p>
+            <p><button class="w3-button w3-block w3-blue">Coming Soon...</button></p>
       </div>
     </div>
 
@@ -353,7 +353,7 @@ div.desc {
         <div class="w3-container w3-black" style="text-align: justify;">
             <H4>AOAVER</H4>
             <p>AOAVER is an Exploring Robot that can avoid static obstacles and investigate places that humans cannot easily access. It is also capable of detecting a variety of obstacles.</p>
-                <p><button class="w3-button w3-block w3-blue">Read More</button></p>
+                <p><button class="w3-button w3-block w3-blue">Coming Soon...</button></p>
           </div>
       </div>
       <div class="w3-third w3-container w3-margin-bottom">
@@ -361,7 +361,7 @@ div.desc {
         <div class="w3-container w3-black" style="text-align: justify;">
             <H4>Shouhardo</H4>
             <p>Shouhardo is a platform through which users can access advanced medical information without the assistance of third parties.</p>
-                <p><button class="w3-button w3-block w3-blue">Read More</button></p>
+                <p><button class="w3-button w3-block w3-blue">Coming Soon...</button></p>
           </div>
       </div>
   </div>
@@ -373,7 +373,7 @@ div.desc {
         <div class="w3-container w3-black" style="text-align: justify;">
             <H4>Dex-Bot</H4>
             <p>Details will be added later</p>
-                <p><button class="w3-button w3-block w3-blue">Read More</button></p>
+                <p><button class="w3-button w3-block w3-blue">Coming Soon...</button></p>
           </div>
       </div>
     <div class="w3-third w3-container w3-margin-bottom">
@@ -381,7 +381,7 @@ div.desc {
       <div class="w3-container w3-black" style="text-align: justify;">
         <H4>Spider Bot</H4>
         <p>Details will be added later</p>
-            <p><button class="w3-button w3-block w3-blue">Read More</button></p>
+            <p><button class="w3-button w3-block w3-blue">Coming Soon...</button></p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
@@ -389,7 +389,7 @@ div.desc {
         <div class="w3-container w3-black" style="text-align: justify;">
             <H4>Assist</H4>
             <p>Details will be added later</p>
-                <p><button class="w3-button w3-block w3-blue">Read More</button></p>
+                <p><button class="w3-button w3-block w3-blue">Coming Soon...</button></p>
           </div>
       </div>
 
@@ -426,17 +426,23 @@ div.desc {
       <h3>BLOG POSTS</h3>
       <ul class="w3-ul w3-hoverable">
         <li class="w3-padding-16">
-          <img src="/assets/img/about/b1.jpg" class="w3-left w3-margin-right" style="width:50px; border: 2px solid #00b3ff;">
-          <span class="w3-large">SS LAB</span><br>
-          <span><a href="https://www.facebook.com/photo?fbid=822918393364805&set=a.355428496780466">See Details</a></span>
+          <img src="/assets/img/b1.jpg" class="w3-left w3-margin-right" style="width:50px; border: 2px solid #00b3ff;">
+          <span class="w3-large">My First Liberary</span><br>
+          <span><a href="https://www.facebook.com/codatron2/">Visit Page</a></span>
         </li>
         <li class="w3-padding-16">
-          <img src="/assets/img/about/b2.jpg" class="w3-left w3-margin-right" style="width:50px; border: 2px solid #00b3ff;">
-          <span class="w3-large"> Digital Experience at Calisto</span><br>
-          <span><a href="https://www.facebook.com/photo?fbid=814762824180362&set=a.355428496780466">See Details</a></span>
+          <img src="/assets/img/b2.jpg" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large"> S. A. Khan Photography</span><br>
+          <span><a href="https://www.facebook.com/sakhanphotography34/">Visit Page</a></span>
+        </li> 
+        <li class="w3-padding-16">
+          <img src="/assets/img/b3.jpg" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large">Snowman Gaming</span><br>
+          <span><a href="https://www.facebook.com/snowman0421/">Visit Page</a></span>
         </li> 
       </ul>
     </div>
+
 
     <div class="w3-third">
       <h3>POPULAR TAGS</h3>
