--- a/about.html
+++ b/about.html
@@ -408,14 +408,19 @@ div.desc {
       <h3>BLOG POSTS</h3>
       <ul class="w3-ul w3-hoverable">
         <li class="w3-padding-16">
-          <img src="/assets/img/about/b1.jpg" class="w3-left w3-margin-right" style="width:50px; border: 2px solid #00b3ff;">
-          <span class="w3-large">SS LAB</span><br>
-          <span><a href="https://www.facebook.com/photo?fbid=822918393364805&set=a.355428496780466">See Details</a></span>
+          <img src="/assets/img/b1.jpg" class="w3-left w3-margin-right" style="width:50px; border: 2px solid #00b3ff;">
+          <span class="w3-large">My First Liberary</span><br>
+          <span><a href="https://www.facebook.com/codatron2/">Visit Page</a></span>
         </li>
         <li class="w3-padding-16">
-          <img src="/assets/img/about/b2.jpg" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
-          <span class="w3-large"> Digital Experience at Calisto</span><br>
-          <span><a href="https://www.facebook.com/photo?fbid=814762824180362&set=a.355428496780466">See Details</a></span>
+          <img src="/assets/img/b2.jpg" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large"> S. A. Khan Photography</span><br>
+          <span><a href="https://www.facebook.com/sakhanphotography34/">Visit Page</a></span>
+        </li> 
+        <li class="w3-padding-16">
+          <img src="/assets/img/b3.jpg" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large">Snowman Gaming</span><br>
+          <span><a href="https://www.facebook.com/snowman0421/">Visit Page</a></span>
         </li> 
       </ul>
     </div>
