--- a/experties.html
+++ b/experties.html
@@ -289,6 +289,7 @@
                 style="color: #00b3ff;"><i class="fa fa-laptop fa-fw w3-margin-right"></i>EXPERTIES</a>
             <a href="/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i
                     class="fa fa-map-marker fa-fw w3-margin-right"></i>CONTACT</a>
+                    <a href="/blog.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class=" 	fa fa-font fa-fw w3-margin-right"></i>BLOG</a>
             <a href="/gallery.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i
                     class="fa fa-camera fa-fw w3-margin-right"></i>GALLERY</a>
             <a href="/assets/doc/cv.pdf" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i
