--- a/experience.html
+++ b/experience.html
@@ -294,6 +294,30 @@
       <hr>
       <ul>
         <li>
+          <h4>Research Assistant </h4>
+        </li>
+
+        <div class="w3-row">
+          <div class="w3-threequarter w3-container ">
+
+            <p>
+              October 2024 – Present
+              <br>
+              <b style="color: #00b3ff;">NSU Intelligent Robotics Lab (NIRO Lab)</b>
+              <br>
+              Assisting the faculty members and their students in academic tasks, including invigilating
+              exam, evaluating exam and homework scripts, helping students in study, etc.
+            </p>
+          </div>
+          <div class="w3-quarter w3-container">
+            <img src="/assets/img/experience/North South University.png" alt=""
+              style="width:40%; border: 0px solid #00b3ff;">
+          </div>
+        </div>
+
+        <br>
+        
+        <!-- <li>
           <h4>Graduate Teaching Assistant </h4>
         </li>
 
@@ -301,7 +325,7 @@
           <div class="w3-threequarter w3-container ">
 
             <p>
-              August 2023 – Present
+              August 2023 – July 2024
               <br>
               <b style="color: #00b3ff;">Department of ECE, North South University</b>
               <br>
@@ -315,7 +339,7 @@
           </div>
         </div>
 
-        <br>
+        <br> -->
 
         <li>
           <h4>Android App Developer </h4>
