Work and CV Updated

--- a/experience.html
+++ b/experience.html
@@ -240,7 +240,7 @@
       </a>
       <img src="/assets/img/dp.png" style="width:60%;" class="w3-round"><br><br>
       <h3>Saif Ahammod Khan</h3>
-      <p class="w3-text-light-grey">Research Assistant at NSU Intelligent Robotics Lab</p>
+      <p class="w3-text-light-grey">Graduate Teaching Assistant</p>
     </div>
     <div class="w3-bar-block">
       <a href="/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i
@@ -294,16 +294,16 @@
       <hr>
       <ul>
         <li>
-          <h4>Research Assistant </h4>
+          <h4>Graduate Teaching Assistant </h4>
         </li>
 
         <div class="w3-row">
           <div class="w3-threequarter w3-container ">
 
             <p>
-              October 2024 – Present
+              July 2023 – Present
               <br>
-              <b style="color: #00b3ff;">NSU Intelligent Robotics Lab (NIRO Lab)</b>
+              <b style="color: #00b3ff;">Department Of ECE</b>
               <br>
               Assisting the faculty members and their students in academic tasks, including invigilating
               exam, evaluating exam and homework scripts, helping students in study, etc.
