--- a/gallery.html
+++ b/gallery.html
@@ -327,7 +327,7 @@
             </a>
             <img src="/assets/img/dp.png" style="width:60%;" class="w3-round"><br><br>
             <h3>Saif Ahammod Khan</h3>
-            <p class="w3-text-light-grey">Research Assistant at NSU Intelligent Robotics Lab</p>
+            <p class="w3-text-light-grey">Graduate Teaching Assistant</p>
         </div>
         <div class="w3-bar-block">
             <a href="/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i
