--- a/research.html
+++ b/research.html
@@ -224,7 +224,7 @@ div.desc {
     </a>
     <img src="/assets/img/dp.png" style="width:60%;" class="w3-round" ><br><br>
     <h3>Saif Ahammod Khan</h3>
-    <p class="w3-text-light-grey">Research Assistant at NSU Intelligent Robotics Lab</p>
+    <p class="w3-text-light-grey">Graduate Teaching Assistant</p>
   </div>
   <div class="w3-bar-block">
     <a href="/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" ><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a> 
