--- a/experience.html
+++ b/experience.html
@@ -240,17 +240,18 @@
       </a>
       <img src="/assets/img/dp.png" style="width:60%;" class="w3-round"><br><br>
       <h3>Saif Ahammod Khan</h3>
-      <p class="w3-text-light-grey">Graduate Teaching Assistant</p>
+      <p class="w3-text-light-grey">AI & Robotics Researcher</p>
     </div>
     <div class="w3-bar-block">
       <a href="/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i
           class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a>
       <a href="/research.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i
           class="fa fa-lightbulb-o fa-fw w3-margin-right"></i>RESEARCH</a>
-      <a href="/experience.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"
+          <a href="/project.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bug fa-fw w3-margin-right"></i>PROJECT </a> 
+          <a href="/experience.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"
         style="color: #00b3ff;"><i class="fa fa-suitcase fa-fw w3-margin-right"></i>EXPERIENCE</a>
-      <a href="/experties.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i
-          class="fa fa-laptop fa-fw w3-margin-right"></i>EXPERTIES</a>
+      <a href="/expertise.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i
+          class="fa fa-laptop fa-fw w3-margin-right"></i>EXPERTISE</a>
       <a href="/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i
           class="fa fa-map-marker fa-fw w3-margin-right"></i>CONTACT</a>
           <a href="/blog.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class=" 	fa fa-font fa-fw w3-margin-right"></i>BLOG</a>
@@ -550,35 +551,39 @@
 
       <hr>
       <!-- Footer -->
-      <footer class="w3-container w3-padding-32" style="background-color: #070F2B;">
-        <div class="w3-row-padding">
-          <div class="w3-third">
-            <h3>Codatron</h3>
-            <p>Coming Soon</p>
-          </div>
-
-          <div class="w3-third" style="color: #E1F7F5;">
-            <h3>BLOG POSTS</h3>
-            <ul class="w3-ul w3-hoverable">
-              <li class="w3-padding-16">
-                <img src="/assets/img/b1.jpg" class="w3-left w3-margin-right" style="width:50px; border: 2px solid #00b3ff;">
-                <span class="w3-large">My First Liberary</span><br>
-                <span><a href="https://www.facebook.com/codatronbd/">Visit Page</a></span>
-              </li>
-              <li class="w3-padding-16">
-                <img src="/assets/img/b2.jpg" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
-                <span class="w3-large"> S. A. Khan Photography</span><br>
-                <span><a href="https://www.facebook.com/sakhanphotography34/">Visit Page</a></span>
-              </li> 
-              <li class="w3-padding-16">
-                <img src="/assets/img/b3.jpg" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
-                <span class="w3-large">Snowman Gaming</span><br>
-                <span><a href="https://www.facebook.com/snowman0421/">Visit Page</a></span>
-              </li> 
-            </ul>
-          </div>
-      
-
+  <footer class="w3-container w3-padding-32" style="background-color: #070F2B;">
+    <div class="w3-row-padding">
+      <div class="w3-third">
+        <h3>codatron.com</h3>
+        <p style="text-align: justify;">Codatron offers IT solutions for businesses and students, 
+          including coding help, project/product development, content 
+          writing, vlog, newsletter etc. Whether you need tech project 
+          suggestions or assistance bringing visions to life, we’re here with you.</p>
+            <p style="text-align: justify;">Youtube: youtube.com/@Codatron</p>
+            <p style="text-align: justify;">Facebook: facebook.com/codatronbd</p>
+            <p style="text-align: justify;">Email: codatron.bd@gmail.com</p>
+      </div>
+    
+      <div class="w3-third" style="color: #E1F7F5;">
+        <h3>Socal Platform</h3>
+        <ul class="w3-ul w3-hoverable">
+          <li class="w3-padding-16">
+            <img src="/assets/img/b1.jpg" class="w3-left w3-margin-right" style="width:50px; border: 2px solid #00b3ff;">
+            <span class="w3-large">Codatron</span><br>
+            <span><a href="https://www.facebook.com/codatronbd/">Visit Page</a></span>
+          </li>
+          <li class="w3-padding-16">
+            <img src="/assets/img/b2.jpg" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+            <span class="w3-large"> S. A. Khan Photography</span><br>
+            <span><a href="https://www.facebook.com/sakhanphotography34/">Visit Page</a></span>
+          </li> 
+          <li class="w3-padding-16">
+            <img src="/assets/img/b3.jpg" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+            <span class="w3-large">Snowman Gaming</span><br>
+            <span><a href="https://www.facebook.com/snowman0421/">Visit Page</a></span>
+          </li> 
+        </ul>
+      </div>
           <div class="w3-third">
             <h3>POPULAR TAGS</h3>
             <p>
